@@ -23,7 +23,7 @@ static void usage(void);
 static void _noop_handler(int signum);
 static void _prompt_loop(void);
 
-typedef enum { NONE, PM8, PM10 } cytype_t;
+typedef enum { NONE, PM8, PM10, PM42 } cytype_t;
 
 static char *prog;
 static cytype_t personality = NONE;
@@ -52,6 +52,8 @@ main(int argc, char *argv[])
                     personality = PM8;
                 else if (strcmp(optarg, "pm10") == 0)
                     personality = PM10;
+                else if (strcmp(optarg, "pm42") == 0)
+                    personality = PM42;
                 else
                     usage();
                 break;
@@ -76,7 +78,7 @@ main(int argc, char *argv[])
 static void 
 usage(void)
 {
-    fprintf(stderr, "Usage: %s -p pm8|pm10\n", prog);
+    fprintf(stderr, "Usage: %s -p pm8|pm10|pm42\n", prog);
     exit(1);
 }
 
@@ -91,6 +93,13 @@ _noop_handler(int signum)
 AlterPath PM\n\
 Copyright (c) 2002-2003 Cyclades Corporation\n\
 V 1.0.9a Jun 26, 2003\n\n"
+
+#define BANNER2 "\
+AlterPath PM\n\
+Copyright (c) 2007 Avocent Corporation\n\
+V 1.9.1 May 2, 2007\n\
+[PM]: IPDU: 1\n\
+[PM]: OUT: 42\n"
 
 #define USER_PROMPT "Username: " /* admin */
 #define PASS_PROMPT "Password: " /* pm8 */
@@ -120,6 +129,27 @@ NOTE: Some commands accept as input a data type called \n\
                   cycle 2-7 (cycle the outlets 2, 3, 4, 5, 6, 7)\n\
                   lock 2,5-7 (lock the outlets 2, 5, 6 and 7).\n"
 
+#define HELP_MSG2 "\n\
+Available commands:\n\
+\n\
+adduser                 alarm                   assign          \n\
+buzzer                  current                 currentprotection\n\
+currseg                 cycle                   dbsync          \n\
+deluser                 display                 exit            \n\
+factory_defaults        help                    hwocp           \n\
+humidity                id                      interval        \n\
+list                    lock                    name            \n\
+off                     on                      outcycledelay   \n\
+passwd                  reboot                  restore         \n\
+save                    status                  syslog          \n\
+temperature             unassign                unlock          \n\
+upgrade                 ver                     voltage         \n\
+whoami                                                          \n\
+\n\
+NOTE: To get detailed help on the commands listed above type\n\
+      '<command> help'\n\n"
+
+
 #define STATUS_TMPL_PM8 "\
  Outlet         Name            Status          Users\n\
  1                              Unlocked %s\n\
@@ -144,6 +174,56 @@ NOTE: Some commands accept as input a data type called \n\
  9                              Unlocked %s\n\
 10                              Unlocked %s\n"
 
+#define STATUS_TMPL_PM42 "\
+ Outlet Name                    Status          Interval (s)    Users\n\
+ 1                              Unlocked %s    0.0\n\
+ 2                              Unlocked %s    0.0\n\
+ 3                              Unlocked %s    0.0\n\
+ 4                              Unlocked %s    0.0\n\
+ 5                              Unlocked %s    0.0\n\
+ 6                              Unlocked %s    0.0\n\
+ 7                              Unlocked %s    0.0\n\
+ 8                              Unlocked %s    0.0\n\
+ 9                              Unlocked %s    0.0\n\
+ 10                             Unlocked %s    0.0\n\
+ 11                             Unlocked %s    0.0\n\
+ 12                             Unlocked %s    0.0\n\
+ 13                             Unlocked %s    0.0\n\
+ 14                             Unlocked %s    0.0\n\
+ 15                             Unlocked %s    0.0\n\
+ 16                             Unlocked %s    0.0\n\
+ 17                             Unlocked %s    0.0\n\
+ 18                             Unlocked %s    0.0\n\
+ 19                             Unlocked %s    0.0\n\
+ 20                             Unlocked %s    0.0\n\
+ 21                             Unlocked %s    0.0\n\
+ 22                             Unlocked %s    0.0\n\
+ 23                             Unlocked %s    0.0\n\
+ 24                             Unlocked %s    0.0\n\
+ 25                             Unlocked %s    0.0\n\
+ 26                             Unlocked %s    0.0\n\
+ 27                             Unlocked %s    0.0\n\
+ 28                             Unlocked %s    0.0\n\
+ 29                             Unlocked %s    0.0\n\
+ 30                             Unlocked %s    0.0\n\
+ 31                             Unlocked %s    0.0\n\
+ 32                             Unlocked %s    0.0\n\
+ 33                             Unlocked %s    0.0\n\
+ 34                             Unlocked %s    0.0\n\
+ 35                             Unlocked %s    0.0\n\
+ 36                             Unlocked %s    0.0\n\
+ 37                             Unlocked %s    0.0\n\
+ 38                             Unlocked %s    0.0\n\
+ 39                             Unlocked %s    0.0\n\
+ 40                             Unlocked %s    0.0\n\
+ 41                             Unlocked %s    0.0\n\
+ 42                             Unlocked %s    0.0\n"
+
+#define CURRENT_PM42 "\
+IPDU #1: RMS current for phase X: 2.3A. Maximum current for phase X: 10.8A\n\
+IPDU #1: RMS current for phase Y: 0.0A. Maximum current for phase Y: 11.6A\n\
+IPDU #1: RMS current for phase Z: 2.5A. Maximum current for phase Z: 11.0A\n"
+
 #define OFF_MSG "%d: Outlet turned off.\n"
 #define ON_MSG  "%d: Outlet turned on.\n"
 
@@ -153,7 +233,7 @@ _prompt_loop(void)
     int i;
     char buf[128];
     int num_plugs;
-    char plug[10][4];
+    char plug[42][4];
     int plug_origin = 1;
     char user[32], pass[32];
     char status_all[32];
@@ -168,6 +248,9 @@ _prompt_loop(void)
         case PM10:
             num_plugs = 10;
             break;
+        case PM42:
+            num_plugs = 42;
+            break;
         case NONE:
             num_plugs = 0;
     }
@@ -179,7 +262,7 @@ _prompt_loop(void)
 
 
 login_again:
-    printf(BANNER);
+    printf(personality == PM42 ? BANNER2 : BANNER);
     do {
         if (xreadline(USER_PROMPT, user, sizeof(user)) == NULL)
             goto done;
@@ -196,26 +279,39 @@ login_again:
             sleep(1); 
             goto login_again;
         } else if (!strcmp(buf, "help")) {
-            printf(HELP_MSG); 
+            printf(personality == PM42 ? HELP_MSG2 : HELP_MSG); 
         } else if (!strcmp(buf, status_all)) {
             if (personality == PM10) {
                 printf(STATUS_TMPL_PM10, 
-                       plug[0], plug[1], plug[2], plug[3],  
-                       plug[4], plug[5], plug[6], plug[7],
-                       plug[8], plug[9], plug[10]);
+                       plug[0],  plug[1],  plug[2],  plug[3],
+                       plug[4],  plug[5],  plug[6],  plug[7],
+                       plug[8],  plug[9],  plug[10]);
             } else if (personality == PM8) {
                 printf(STATUS_TMPL_PM8, 
-                       plug[0], plug[1], plug[2], plug[3],  
-                       plug[4], plug[5], plug[6], plug[7]);
+                       plug[0],  plug[1],  plug[2],  plug[3],
+                       plug[4],  plug[5],  plug[6],  plug[7]);
+            } else if (personality == PM42) {
+                printf(STATUS_TMPL_PM42, 
+                       plug[0],  plug[1],  plug[2],  plug[3],
+                       plug[4],  plug[5],  plug[6],  plug[7], 
+                       plug[8],  plug[9],  plug[10], plug[11],
+                       plug[12], plug[13], plug[14], plug[15],
+                       plug[16], plug[17], plug[18], plug[19],
+                       plug[20], plug[21], plug[22], plug[23],
+                       plug[24], plug[25], plug[26], plug[27],
+                       plug[28], plug[29], plug[30], plug[31],
+                       plug[32], plug[33], plug[34], plug[35],
+                       plug[36], plug[37], plug[38], plug[39],
+                       plug[40], plug[41]);
             }
         } else if (!strcmp(buf, on_all)) {
             for (i = 0; i < num_plugs; i++) {
-                strcpy(plug[i], "ON");
+                strcpy(plug[i], personality == PM42 ? "ON " : "ON");
                 printf(ON_MSG, i);
             }
         } else if (sscanf(buf, "on %d", &i) == 1) {
             if (i >= plug_origin && i < num_plugs + plug_origin) {
-                strcpy(plug[i - plug_origin], "ON");
+                strcpy(plug[i - plug_origin], personality == PM42 ? "ON ":"ON");
                 printf(ON_MSG, i);
             } else
                 goto err;
